# prepublish-web

./: .gitignore  Cargo.toml  config.json  index.html
src/: app.rs  main.rs
src/app/: common.rs  login.rs  mod.rs  profiles.rs  signup.rs  theses.rs  versions.rs
src/app/theses/: get.rs  mod.rs
src/app/theses/post/: authors_area.rs  keywords_area.rs  mod.rs
src/models/: common.rs  mod.rs  profile.rs  review.rs  thesis.rs  version.rs
src/views/: alerts.rs  errs.rs  login.rs  mod.rs  route.rs  signup.rs  tiny_profiles.rs
src/views/profile_list/: entity.rs  input.rs  mod.rs
src/views/theses/: mod.rs  route.rs
src/views/theses/get/: mod.rs  page.rs
src/views/theses/post/: mod.rs
src/views/theses/post/authors/: entity.rs  input.rs  mod.rs
src/views/theses/post/keywords/: entity.rs  input.rs  mod.rs
src/views/versions/: mod.rs  page.rs
src/views/versions/page/: adjudge.rs  mod.rs  pdf.rs  review.rs
src/views/versions/page/edit/: mod.rs
