[package]
name = "prepublish-web"
version = "0.1.0"
edition = "2021"
license = "AGPLv3"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
email_address = "0.2.4"
gloo = "0.8.1"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.97"
serde_with = "3.0.0"
url = { version = "2.4.0", features = ["serde"] }
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"
